--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "streamdown": "^2.1.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "tldraw": "^4.3.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
