--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "dev:server": "bun --watch src/server/index.ts",
     "dev:web": "vite",
     "build": "vite build",
-    "start": "bun src/server/index.ts"
+    "start": "bun src/server/index.ts",
+    "lint": "biome check src",
+    "lint:fix": "biome check --fix src",
+    "format": "biome format --write src",
+    "check": "biome check --fix --unsafe src"
   },
   "dependencies": {
     "@mariozechner/pi-coding-agent": "^0.52.8",
@@ -28,6 +32,7 @@
     "tldraw": "^4.3.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.14",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.18",
     "@types/bun": "^1.3.8",
