--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "radix-ui": "^1.4.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "sharp": "^0.34.5",
     "streamdown": "^2.1.0",
     "tailwind-merge": "^3.4.0",
     "tldraw": "^4.3.1"
@@ -39,6 +40,7 @@
     "@types/bun": "^1.3.8",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
+    "@types/sharp": "^0.32.0",
     "@vitejs/plugin-react": "^5.1.3",
     "concurrently": "^9.2.1",
     "tailwindcss": "^4.1.18",
